...
        TransKey.ADD_EVENT to "Add Event",
        TransKey.NO_EVENTS to "No events for this day",
        TransKey.EDIT to "Edit",
        TransKey.DELETE to "Delete",
        TransKey.NEW_EVENT to "New Event",
        TransKey.EDIT_EVENT to "Edit Event",
        TransKey.TITLE to "Event Title",
        TransKey.DESCRIPTION to "Description",
        TransKey.ALL_DAY to "All Day Event",
        TransKey.TIME to "Time",
        TransKey.END_TIME to "End Time",
        TransKey.REMINDERS to "Reminders",
        TransKey.VAL to "Val",
...
